--- a/1_episode/package.json
+++ b/1_episode/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@tailwindcss/postcss": "^4.2.0",
     "and": "^0.0.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
@@ -19,8 +20,11 @@
   "devDependencies": {
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
+    "autoprefixer": "^10.4.24",
     "eslint-config-prettier": "^10.1.8",
     "parcel": "^2.16.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5.9.3"
   }
 }
